# aoc2022

./: Cargo.toml  Readme.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rb  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d2.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs  main.rs
