[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[features]
private_git = ["nicole"]

[dependencies]
macros = { path = "macros" }
itertools = "0.10.5"
regex = "1.7.0"
serde_json = "1.0.89"
anyhow = "1.0.66"
rayon = "1.6.1"
derive_more = "0.99.17"
nicole = { git = "ssh://git@github.com/softsilverwind/nicole.git", tag = "v0.2.1", optional = true }
